--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@stitches/react": "1.2.7",
+    "@types/react": "18.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "5.0.0"
