--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@stitches/react": "1.2.7",
-    "@types/react": "18.0.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-scripts": "5.0.0"
+    "@stitches/react": "^1.2.8",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "typescript": "4.4.2"
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.11.35",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.4",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,5 +27,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
